fix column header wrapping and overlapping

--- a/dashboard/assets/admin/dashboard/styles/custom.css
+++ b/dashboard/assets/admin/dashboard/styles/custom.css
@@ -54,6 +54,7 @@ div#changelist-filter {
 
 #changelist table thead th {
     padding-left: 5px;
+    white-space: inherit;
 }
 
 #changelist table {
